# Personality-Construct

./: .gitignore  README.md  compose.yml
applications/language_model/: configuration.ini  pyproject.toml  requirements.txt
applications/language_model/.archive/: main.py
applications/language_model/language_model/: cli.py  config.py  defaults.py
applications/language_model/language_model/embedding_model/: api.py
applications/language_model/language_model/language_model/: language_model.py  mistral_chat_template.py  template.py
applications/language_model/language_model/retrieval_augmented_generation/: document_manager.py  pipeline.py  refiner.py  reranker.py  shared.py
applications/language_model/resources/: chat_template.j2  mistral_nemo_chat_template-modified.j2  mistral_nemo_chat_template.j2  simplified_chat_template.j2
applications/speech_recognition/: pyproject.toml
applications/speech_recognition/speech_recognition/: cli.py  server.py
applications/text_to_speech/: configuration.ini  pyproject.toml
applications/text_to_speech/text_to_speech/: cli.py  config.py  converter.py  server.py  setup.py
applications/text_to_speech/text_to_speech/text_to_speech/: default_api.py  text_to_speech.py
applications/text_to_speech/text_to_speech/tone_converter/: default_api.py  tone_converter.py  tone_converter_trainer.py
applications/text_to_speech/text_to_speech/tts/: __init__.py  api.py  base_predictor.py  embedding.py  embedding_predictor.py  text_to_speech.py  tone_converter.py  trainer.py  utilities.py  wrapped_api.py
applications/text_to_speech/text_to_speech/utilities/: audio.py  device.py
libraries/_utilities/: pyproject.toml
libraries/_utilities/_utilities/: logger.py
libraries/configuration/: pyproject.toml
libraries/configuration/_configuration/: __init__.py
libraries/configuration/tests/: configuration_test.py
libraries/python_config/: pyproject.toml
libraries/python_config/python_config/: config.py  utilities.py
libraries/python_config/tests/: config_test.py
libraries/python_discovery/python_discovery/: etcd_service_registrar.py
libraries/python_utilities/: pyproject.toml
libraries/service_discovery/: pyproject.toml
libraries/service_discovery/_service_discovery/: etcd_service_registrar.py
libraries/sound_input/: pyproject.toml
libraries/sound_input/_sound_input/: listener.py
libraries/utilities/: pyproject.toml
libraries/utilities/_utilities/: cuda.py  logger.py  models.py  utilities.py
resources/: .gitignore
