[tool.poetry]
name = "language-model"
version = "0.1.0"
description = ""
authors = ["Jacek Lipiec <jacek.lipiec.bc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
internal-configuration = { path = "../../libraries/configuration", develop = true }
internal-utilities = { path = "../../libraries/utilities", develop = true }
torch = {version = "2.3.1+cu121", source = "pytorch-gpu"}
optimum = {git = "https://github.com/huggingface/optimum", rev = "v1.23.2"}
transformers = {git = "https://github.com/huggingface/transformers", rev = "v4.45.2"}
numpy = "1.26.4"
autoawq = "^0.2.6"
sentence-transformers = "^3.2.1"
psycopg2 = "^2.9.10"
pgvector = "^0.3.6"

[[tool.poetry.packages]]
include = "language_model"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.scripts]
cli = "language_model.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
